# unity-cli

./: .gitignore  README.jp.md  README.md  pyproject.toml
.github/workflows/: release.yml
TestProject/Assets/Scenes/: SampleScene.unity
TestProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
TestProject/Assets/Tests/Editor/: BridgeManagerAsyncTests.cs  SceneTest.cs
TestProject/Assets/Tests/PlayMode/: Game.Tests.PlayMode.asmdef  SampleHUDTests.cs
TestProject/Assets/UI/: Game.UI.asmdef
TestProject/ProjectSettings/: ProjectSettings.asset
UnityBridge/: package.json
UnityBridge/Editor/: BridgeManager.cs
UnityBridge/Editor/Tools/: Component.cs  GameObject.cs
relay/: instance_registry.py  server.py
skills/unity-api/: SKILL.md
skills/unity-asset/: SKILL.md
skills/unity-build/: SKILL.md
skills/unity-debug/: SKILL.md
skills/unity-perf/: SKILL.md
skills/unity-scene/: SKILL.md
skills/unity-shared/: SKILL.md
skills/unity-ui/: SKILL.md
skills/unity-verify/: SKILL.md
tests/: test_dynamic_api.py  test_relay_logging.py  test_schema_cache.py  test_server_detail.py  test_uitree_monkey.py  test_uitree_snapshot.py
tests/integration/: test_monkey_snapshot_e2e.py  test_sample_hud_e2e.py
unity_cli/: client.py
unity_cli/api/: __init__.py  dynamic_api.py  gameobject.py  schema_cache.py  uitree_monkey.py  uitree_snapshot.py
unity_cli/cli/: app.py
unity_cli/cli/commands/: api.py  completion.py  gameobject.py  uitree.py
unity_cli/hub/: paths.py
