[project]
name = "unity-cli"
version = "3.11.1"
description = "Python client for Unity Bridge Relay Server - control Unity Editor via TCP protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "bigdra50" }
]
keywords = ["unity", "cli", "game-development", "editor-control", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.15.0",
    "rich>=14.0.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
interactive = ["InquirerPy>=0.3.4"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.19.1",
    "ruff>=0.14.13",
    "pre-commit>=4.0",
    "import-linter>=2.1",
    "radon>=6.0",
    "xenon>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires running Relay Server and Unity Editor",
]

[project.urls]
Homepage = "https://github.com/bigdra50/unity-cli"
Repository = "https://github.com/bigdra50/unity-cli"

[project.scripts]
unity-cli = "unity_cli:main"
unity = "unity_cli:main"
u = "unity_cli:main"
unity-relay = "relay.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unity_cli", "relay"]

[tool.hatch.build.targets.sdist]
include = [
    "unity_cli/",
    "relay/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM105", # use contextlib.suppress (stylistic)
    "SIM108", # use ternary operator (stylistic)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.importlinter]
root_packages = ["relay", "unity_cli"]

[[tool.importlinter.contracts]]
name = "relay and unity_cli are independent"
type = "independence"
modules = ["relay", "unity_cli"]

[[tool.importlinter.contracts]]
name = "unity_cli layer ordering"
type = "layers"
layers = [
    "unity_cli.cli",
    "unity_cli.hub | unity_cli.api | unity_cli.client",
    "unity_cli.models | unity_cli.config | unity_cli.exceptions",
]
# client <-> api は TYPE_CHECKING + 遅延importによる意図的な相互参照
ignore_imports = [
    "unity_cli.client -> unity_cli.api",
    "unity_cli.api.* -> unity_cli.client",
]

[[tool.importlinter.contracts]]
name = "relay layer ordering"
type = "layers"
layers = [
    "relay.server",
    "relay.instance_registry | relay.request_cache",
    "relay.status_file | relay.protocol",
]
